--- a/ui/app.html
+++ b/ui/app.html
@@ -7,7 +7,7 @@
     {{ APP }}
     <script
       type="text/javascript"
-      src="https://a.opmnstr.com/app/js/api.min.js"
+      src="https://a.omappapi.com/app/js/api.min.js"
       data-account="82043"
       data-user="72987" async>
     </script>
